# ranunculus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_ja.md
include/: utility.hpp
include/ranunculus/: arith.hpp  array_view.hpp  bitcount.hpp  compare.hpp  concepts.hpp  environment.hpp  integer_sequence.hpp  operators.hpp  type_sequence.hpp  types.hpp  utility.hpp
include/ranunculus/compare/: eq.hpp  ge.hpp  gt.hpp  le.hpp  lt.hpp  ne.hpp  traits.hpp
tests/: CMakeLists.txt  array_view_test.cpp  bitcount_test.cpp  integer_sequence_test.cpp  operators_test.cpp  test_main.cpp  type_sequence_test.cpp
